@@ -1,3 +1,7 @@
+Sun  Sep 12  2004	H. Wade Minter (minter@lunenburg.org)
+     * Add a Publisher choice to the bulk_add routine.
+     * Refactor a couple of looped database queries to use placeholders.
+
 Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)
      * Fixed a similar bug in the edit_categories function.
      * Fixed an inaccuracy in progress reporting with update_times, due
